<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    android:background="#dc00448d"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="452dp"
        android:layout_gravity="center_horizontal|bottom">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/editTextIp"
                android:layout_gravity="right|top"
                android:background="@android:drawable/editbox_background_normal" />

            <EditText
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextPort"
                android:layout_gravity="right|bottom"
                android:background="@android:drawable/editbox_background_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/server_ip"
                android:id="@+id/textView2"
                android:layout_gravity="left|top"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/server_port"
                android:id="@+id/textView3"
                android:layout_gravity="left|bottom"
                android:textColor="#ffffff" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/file_name"
                android:id="@+id/textView4"
                android:layout_gravity="left|top"
                android:textColor="#ffffff" />

            <EditText
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextFileName"
                android:layout_gravity="right|top"
                android:background="@android:drawable/editbox_background_normal"
                android:inputType="none" />

            <EditText
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextMeasure"
                android:layout_gravity="right|center_vertical"
                android:background="@android:drawable/editbox_background_normal" />

            <TextView
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/measure"
                android:id="@+id/textView5"
                android:layout_gravity="left|center_vertical"
                android:textColor="#ffffff" />
        </FrameLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/save_btn"
            android:id="@+id/save"
            android:layout_gravity="center_horizontal|bottom" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView"
        android:layout_gravity="left|top"
        android:textColor="#fdfdfd" />

</FrameLayout>
